# QML_Guide1

./: CMakeLists.txt  Main.qml  Readme.txt  app_environment.h  import_qml_plugins.h  main.cpp  qmlmodules  qtquickcontrols2.conf
apps/calendar/: CMakeLists.txt
apps/courses/: CMakeLists.txt
apps/inbox/: CMakeLists.txt
apps/latestnews/: CMakeLists.txt
apps/webradio/: CMakeLists.txt
imports/: CMakeLists.txt
imports/assets/: CMakeLists.txt
imports/popups/: CMakeLists.txt
imports/utils/: CMakeLists.txt
imports/views/: CMakeLists.txt
mainui/: CMakeLists.txt
mainui/home/: Header.qml
styles/: CMakeLists.txt
styles/gui1style/: CMakeLists.txt  qmldir
